[gd_scene load_steps=7 format=3 uid="uid://ctpo80qdx26yv"]

[ext_resource type="Script" path="res://Code/game_over_menu.gd" id="1_wfajb"]
[ext_resource type="FontFile" uid="uid://c3nn573cqpuwl" path="res://Assets/Extras/8bitoperator_jve.ttf" id="2_30bdu"]
[ext_resource type="AudioStream" uid="uid://c7tt4l8edy80k" path="res://Audio/Temporary/Music/ES_Ode to What Could Have Been (Instrumental Version) - Par Hagstrom.wav" id="2_o8gw3"]
[ext_resource type="Texture2D" uid="uid://7crlfome1lly" path="res://Assets/UI/Board.png" id="3_jcbj4"]
[ext_resource type="AudioStream" uid="uid://fqgrvw4yaycx" path="res://Audio/Temporary/Sound/ES_Impact Wood 1 - SFX Producer.wav" id="3_o3y0p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sgkaw"]

[node name="Game Over Menu" type="Node2D"]
script = ExtResource("1_wfajb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="Camera2D"]
custom_minimum_size = Vector2(480, 270)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.572549, 0.8, 1)

[node name="Label" type="Label" parent="Camera2D/Control"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 21.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_30bdu")
text = "You ran out of money"

[node name="Label2" type="Label" parent="Camera2D/Control"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.428125
anchor_top = 0.062963
anchor_right = 0.571875
anchor_bottom = 0.062963
offset_left = -44.0
offset_top = 21.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_30bdu")
text = "and had to end your"

[node name="Label3" type="Label" parent="Camera2D/Control"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.473958
anchor_top = 0.125926
anchor_right = 0.526042
anchor_bottom = 0.125926
offset_left = -44.0
offset_top = 21.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_30bdu")
text = "vacation early."

[node name="Button" type="Button" parent="Camera2D/Control"]
layout_mode = 0
offset_left = 196.0
offset_top = 83.0
offset_right = 284.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_30bdu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sgkaw")
text = "Replay"
icon = ExtResource("3_jcbj4")
flat = true
icon_alignment = 1

[node name="Button2" type="Button" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 121.0
offset_right = 48.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_30bdu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sgkaw")
text = "Main Menu"
icon = ExtResource("3_jcbj4")
flat = true
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o8gw3")
volume_db = -11.291
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_o3y0p")
volume_db = -5.943

[connection signal="pressed" from="Camera2D/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Camera2D/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
